--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,46 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pauline.groupprojecttry.MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.example.pauline.groupprojecttry.MainActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/value1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="80dp"/>
+            android:textSize="80dp" />
 
         <TextView
             android:id="@+id/value2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="80dp"/>
+            android:textSize="80dp" />
 
         <TextView
             android:id="@+id/value3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="80dp"/>
+            android:textSize="80dp" />
 
         <TextView
             android:id="@+id/value4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="80dp"/>
+            android:textSize="80dp" />
 
     </LinearLayout>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Go"
-        android:onClick="go"/>
+        android:onClick="go"
+        android:text="Go" />
 
     <LinearLayout
         android:id="@+id/buttons"
@@ -52,29 +52,30 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <Button
                 android:id="@+id/button1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1"/>
+                android:text="1" />
 
             <Button
                 android:id="@+id/button2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2"/>
+                android:text="2" />
 
             <Button
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3"/>
+                android:text="3" />
 
             <Button
                 android:id="@+id/button4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="4"/>
+                android:text="4" />
 
         </LinearLayout>
 
@@ -86,9 +87,42 @@
                 android:id="@+id/ok"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="ok"/>
+                android:text="ok" />
         </LinearLayout>
 
     </LinearLayout>
+
+    <!--progress bar-->
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.example.brandonmain.progressbarexample2.MainActivity">
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_margin="10dp"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            />
+
+        <TextView
+            android:id="@+id/LoadingCompleteTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Time Complete"
+            android:layout_below="@+id/progressbar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp"
+            android:textSize="24sp"
+            android:visibility="invisible"
+            />
+
+    </RelativeLayout>
+
+    <!--progress bar-->
 
 </LinearLayout>
