--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,31 +8,24 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </Spinner>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:id="@+id/value1"
+            android:id="@+id/sequence"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="80dp"/>
-
-        <TextView
-            android:id="@+id/value2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="80dp"/>
-
-        <TextView
-            android:id="@+id/value3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="80dp"/>
-
-        <TextView
-            android:id="@+id/value4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="80dp"/>
+            android:textSize="70dp"/>
 
     </LinearLayout>
 
