--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.pauline.groupprojecttry.MainActivity"
+
     android:orientation="vertical">
 
     <LinearLayout
@@ -21,15 +22,58 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <TextView
-            android:id="@+id/sequence"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="70dp"/>
+
+        <ImageView
+            android:id="@+id/image1"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+        <ImageView
+            android:id="@+id/image2"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+        <ImageView
+            android:id="@+id/image3"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+        <ImageView
+            android:id="@+id/image4"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+        <ImageView
+            android:id="@+id/image5"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+        <ImageView
+            android:id="@+id/image6"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+        <ImageView
+            android:id="@+id/image7"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+        <ImageView
+            android:id="@+id/image8"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+        <ImageView
+            android:id="@+id/image9"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+        <ImageView
+            android:id="@+id/image10"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
+
+        <!--<TextView-->
+            <!--android:id="@+id/sequence"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="70dp"/>-->
 
     </LinearLayout>
 
     <Button
+        android:id="@+id/goButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Go"
@@ -47,30 +91,43 @@
             android:layout_height="wrap_content">
             <Button
                 android:id="@+id/button1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1"/>
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="@drawable/left_button"
+                android:text=""/>
 
             <Button
                 android:id="@+id/button2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2"/>
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="@drawable/up_button"
+                android:text=""/>
 
             <Button
                 android:id="@+id/button3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="3"/>
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="@drawable/down_button"
+                android:text=""/>
 
             <Button
                 android:id="@+id/button4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4"/>
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="@drawable/right_button"
+                android:text=""/>
 
         </LinearLayout>
 
+
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Change Type"
+        android:onClick="changeSet"
+
+        />
 
 </LinearLayout>
