--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -7,24 +7,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.pauline.groupprojecttry.GamePage"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:orientation="vertical"
-    android:weightSum="100"
+
     android:background="@drawable/background_v2"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="10"
+
         android:orientation="horizontal"
         android:weightSum="10">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight=""
-            android:autoText="false"
+
+
             android:paddingLeft="50dp"
             android:paddingTop="17dp"
             android:text="Lives:" />
@@ -49,17 +49,13 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="35"
-        >
-    </LinearLayout>
+
 
     <LinearLayout
+        android:layout_marginTop="230dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+
         >
 
         <ImageView
@@ -132,36 +128,18 @@
 
     </LinearLayout>
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="5"
-        >
-
-
-    </LinearLayout>
-
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-
+        android:orientation="vertical"
         android:layout_marginLeft="100dp"
         android:layout_marginRight="100dp"
-        android:layout_marginTop="10dp"
-        android:layout_weight="30"
-        android:columnCount="10"
-        android:rowCount="10">
+        android:layout_marginTop="45dp"
 
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_column="0"
-            android:layout_columnWeight="100"
-            android:layout_row="1"
-            android:layout_rowWeight="100"
-            android:background="@drawable/left_button"
-            android:onClick="print" />
+
+        >
 
         <Button
             android:id="@+id/button3"
@@ -172,37 +150,50 @@
             android:layout_row="0"
             android:layout_rowWeight="100"
             android:background="@drawable/up_button"
-            android:onClick="print" />
+            android:onClick="print"
+            android:layout_marginLeft="80dp"
+            />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:background="@drawable/left_button"
+                android:onClick="print" />
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="70dp"
+                android:background="@drawable/right_button"
+                android:onClick="print" />
+
+        </LinearLayout>
+
 
         <Button
             android:id="@+id/button5"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_column="1"
-            android:layout_columnWeight="100"
-            android:layout_row="2"
-            android:layout_rowWeight="100"
             android:background="@drawable/down_button"
-            android:onClick="print" />
-
-        <Button
-            android:id="@+id/button7"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_column="2"
-            android:layout_columnWeight="100"
-            android:layout_row="1"
-            android:layout_rowWeight="100"
-            android:background="@drawable/right_button"
+            android:layout_marginLeft="80dp"
             android:onClick="print" />
 
 
-    </GridLayout>
+
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="20"
+        android:layout_height="70dp"
+        android:layout_marginTop="40dp"
         android:paddingTop="20dp"
         android:orientation="horizontal"
         >
