--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -16,54 +16,42 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.242" />
-<!--<LinearLayout
-android:layout_width="276dp"
-
-android:layout_height="100dp"
-android:layout_marginBottom="8dp"
-android:layout_marginEnd="8dp"
-android:layout_marginStart="8dp"
-android:layout_marginTop="8dp"
-app:layout_constraintBottom_toBottomOf="parent"
-app:layout_constraintEnd_toEndOf="parent"
-app:layout_constraintHorizontal_bias="0.187"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintTop_toTopOf="parent"
-app:layout_constraintVertical_bias="0.583">-->
 
     <Button
-        android:id="@+id/button1"
-        android:layout_width="102dp"
-        android:layout_height="62dp"
+        android:id="@+id/goButton"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
 
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Go"
+        android:background="@drawable/button_start"
+        android:onClick="goMethod"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.127"
+        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.658" />
+        app:layout_constraintVertical_bias="0.577" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="102dp"
-        android:layout_height="62dp"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
 
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Exit"
+        android:background="@drawable/ExitGame"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.815"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.879" />
+        app:layout_constraintVertical_bias="0.949" />
 
     <Button
         android:id="@+id/button3"
@@ -74,13 +62,14 @@ app:layout_constraintVertical_bias="0.583">-->
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Options"
+        android:background="@drawable/Options"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.875"
+        app:layout_constraintHorizontal_bias="0.967"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.655" />
+        app:layout_constraintVertical_bias="0.763" />
 
     <Button
         android:id="@+id/button4"
@@ -91,14 +80,13 @@ app:layout_constraintVertical_bias="0.583">-->
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Tutorial"
+        android:background="@drawable/Tutorial"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintHorizontal_bias="0.032"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.876" />
-
-   <!-- </LinearLayout>-->
+        app:layout_constraintVertical_bias="0.763" />
 
 </android.support.constraint.ConstraintLayout>
