--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.pauline.groupprojecttry.GamePage"
-    android:orientation="vertical"
-    android:background="@drawable/background_v2">
+    android:background="@drawable/background_v2"
+    tools:context="com.example.pauline.groupprojecttry.GamePage">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout3"
+        android:layout_width="0dp"
 
+        android:layout_height="38dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
-        android:weightSum="10">
+        android:weightSum="10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:layout_width="wrap_content"
@@ -20,7 +31,7 @@
 
 
             android:paddingLeft="50dp"
-            android:paddingTop="17dp"
+            android:paddingTop="12dp"
             android:text="Lives:" />
 
         <TextView
@@ -45,68 +56,85 @@
 
     <LinearLayout
         android:id="@+id/buttons"
-        android:layout_marginTop="230dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.479">
 
         <ImageView
             android:id="@+id/image1"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="50dp"
-            android:layout_marginTop="52dp"/>
+            android:layout_marginTop="52dp" />
 
         <ImageView
             android:id="@+id/image2"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="52dp"/>
+            android:layout_marginTop="52dp" />
 
         <ImageView
             android:id="@+id/image3"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="52dp"/>
+            android:layout_marginTop="52dp" />
 
         <ImageView
             android:id="@+id/image4"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="52dp"/>
+            android:layout_marginTop="52dp" />
 
         <ImageView
             android:id="@+id/image5"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="52dp"/>
+            android:layout_marginTop="52dp" />
 
         <ImageView
             android:id="@+id/image6"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="52dp"/>
+            android:layout_marginTop="52dp" />
 
         <ImageView
             android:id="@+id/image7"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="52dp"/>
+            android:layout_marginTop="52dp" />
 
         <ImageView
             android:id="@+id/image8"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="52dp"/>
+            android:layout_marginTop="52dp" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/linearLayout4"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:orientation="vertical"
-        android:layout_marginLeft="100dp"
-        android:layout_marginRight="100dp"
-        android:layout_marginTop="45dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.448"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.803">
 
         <Button
             android:id="@+id/button2"
@@ -114,17 +142,17 @@
             android:layout_height="50dp"
             android:layout_column="1"
             android:layout_columnWeight="100"
+            android:layout_marginLeft="80dp"
             android:layout_row="0"
             android:layout_rowWeight="100"
             android:background="@drawable/up_button"
-            android:onClick="print"
-            android:layout_marginLeft="80dp"
-            />
+            android:onClick="print" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+
             <Button
                 android:id="@+id/button1"
                 android:layout_width="50dp"
@@ -148,34 +176,40 @@
             android:id="@+id/button3"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@drawable/down_button"
             android:layout_marginLeft="80dp"
+            android:background="@drawable/down_button"
             android:onClick="print" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginTop="40dp"
-        android:paddingTop="20dp"
+        android:id="@+id/linearLayout5"
+        android:layout_width="wrap_content"
+        android:layout_height="68dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
-        >
+        android:paddingTop="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Replay Sequence"
-            />
+            android:text="Replay Sequence" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="170dp"
-            android:text="Options"
-            />
+            android:text="Options" />
 
 
     </LinearLayout>
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
