--- a/app/src/main/res/layout/activity_play_settings.xml
+++ b/app/src/main/res/layout/activity_play_settings.xml
@@ -11,22 +11,33 @@
         android:layout_height="wrap_content"
         >
         <TextView
-            android:id="@+id/lives"
-            android:layout_marginLeft="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lives"
+            android:layout_marginLeft="15dp"
+            android:text="Lives:"
             />
-
-
+        <TextView
+            android:id="@+id/lives"
+            android:paddingLeft="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/coins"
-            android:layout_marginRight="80dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:text="Coins"
+            android:paddingLeft="200dp"
+            android:layout_marginRight="20dp"
+            android:text="Coins:"/>
+
+        <TextView
+            android:id="@+id/coins"
+            android:paddingLeft="250dp"
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+
             />
 
     </RelativeLayout>
