--- a/app/src/main/res/layout/activity_play_settings.xml
+++ b/app/src/main/res/layout/activity_play_settings.xml
@@ -32,10 +32,10 @@
     </RelativeLayout>
     <Button
         android:id="@+id/buy_coins"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="30dp"
         android:layout_marginLeft="10dip"
-        android:text="Buy Coins"
+        android:background="@drawable/buycoins_button"
         />
 
     <Switch
@@ -82,13 +82,13 @@
         <!-- Exits the the game -->
         <Button
             android:id="@+id/exit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/back"
             android:layout_alignParentBottom="true"
             android:layout_toRightOf="@+id/view"
-            android:text="Exit"
+            android:background="@drawable/exit_button"
             />
 
         <View
@@ -100,12 +100,12 @@
         <!-- Goes back to the game -->
         <Button
             android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
             android:layout_toLeftOf="@+id/view"
-            android:text="Back" />
+            android:background="@drawable/back_button"/>
 
     </RelativeLayout>
 
