--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -20,14 +20,14 @@
 
     <Button
         android:id="@+id/goButton"
-        android:layout_width="120dp"
+        android:layout_width="180dp"
         android:layout_height="60dp"
 
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/button_start"
+        android:background="@drawable/start_button"
         android:onClick="goMethod"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,14 +39,14 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="120dp"
+        android:layout_width="180dp"
         android:layout_height="60dp"
 
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/exitgame"
+        android:background="@drawable/exit_button"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,14 +56,14 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="120dp"
+        android:layout_width="180dp"
         android:layout_height="60dp"
 
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/options"
+        android:background="@drawable/options_button"
         android:text=""
         android:onClick="settings"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,14 +75,14 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="120dp"
+        android:layout_width="180dp"
         android:layout_height="60dp"
 
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/tutorial"
+        android:background="@drawable/tutorial_button"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
