--- a/app/src/main/res/layout/activity_start_page.xml
+++ b/app/src/main/res/layout/activity_start_page.xml
@@ -21,7 +21,6 @@
         android:id="@+id/goButton"
         android:layout_width="120dp"
         android:layout_height="60dp"
-
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -47,6 +46,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/exitgame"
         android:text=""
+        android:onClick="exitgame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
