Added background and changed colors of menu pages according to that

--- a/app/src/main/res/layout/activity_logo.xml
+++ b/app/src/main/res/layout/activity_logo.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@android:color/darker_gray"
     tools:context="com.example.pauline.groupprojecttry.LogoActivity">
 
     <ImageView
         android:id="@+id/imagelogo"
         android:layout_width="392dp"
-        android:layout_height="590dp"
+        android:layout_height="595dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
