--- a/app/src/main/res/layout/activity_game_name.xml
+++ b/app/src/main/res/layout/activity_game_name.xml
@@ -4,22 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backgroundstart"
     tools:context="com.example.pauline.groupprojecttry.GameNameActivity">
-    <ImageView
-        android:id="@+id/imagelogo"
-        android:layout_width="392dp"
-        android:layout_height="590dp"
+
+    <LinearLayout
+        android:layout_width="380dp"
+        android:layout_height="367dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:foregroundGravity="center"
-        android:src="@drawable/gamename"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.308" />
+        app:layout_constraintVertical_bias="0.0">
+
+        <ImageView
+            android:id="@+id/imagelogo"
+            android:layout_width="450dp"
+            android:layout_height="450dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:src="@drawable/gamename"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/textView"
@@ -31,9 +48,8 @@
         android:layout_marginTop="8dp"
         android:text="Loading....."
         android:textAlignment="center"
-        android:textColor="@color/colorPrimaryDark"
-        android:textColorLink="@color/colorPrimaryDark"
-        android:textSize="20dp"
+        android:textColor="@android:color/background_light"
+        android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,27 +59,27 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="285dp"
-        android:layout_height="31dp"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="329dp"
+        android:layout_height="25dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
-        android:foregroundTint="@color/colorPrimary"
-        android:indeterminate="false"
+
         android:max="100"
-        android:minHeight="75dp"
+        android:maxHeight="50dp"
+        android:minHeight="50dp"
         android:minWidth="150dp"
         android:progress="25"
-        android:progressBackgroundTint="@color/colorPrimary"
-        android:progressTint="@color/colorPrimary"
+
+        android:progressTint="#fd87baae"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.743" />
+        app:layout_constraintVertical_bias="0.777" />
 
 </android.support.constraint.ConstraintLayout>
