--- a/app/src/main/res/layout/activity_play_settings.xml
+++ b/app/src/main/res/layout/activity_play_settings.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backgroundstart"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -14,6 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
+            android:textColor="@android:color/background_light"
             android:text="Lives:"
             />
         <TextView
@@ -27,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:paddingLeft="200dp"
+            android:textColor="@android:color/background_light"
             android:layout_marginRight="20dp"
             android:text="Coins:"/>
 
@@ -41,13 +44,21 @@
             />
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/empty"
+        android:paddingLeft="250dp"
+        android:layout_marginRight="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"/>
+
     <Button
         android:id="@+id/buy_coins"
         android:layout_width="90dp"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:layout_marginLeft="10dip"
-        android:background="@drawable/buycoins_button"
-        />
+        android:background="@drawable/buycoins_button" />
 
     <Switch
         android:id="@+id/sound"
@@ -55,6 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dip"
         android:layout_marginLeft="10dip"
+        android:textColor="@android:color/background_light"
         android:gravity="left"
         android:textSize="25sp"
         android:text="Sound" />
@@ -67,8 +79,7 @@
         android:layout_marginTop="20dip"
         android:layout_marginLeft="10dip"
         android:text="Category"
-        android:textColor="@android:color/black"
-
+        android:textColor="@android:color/background_light"
         android:textSize="25sp" />
 
     <!-- Spinner Element -->
@@ -78,11 +89,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="10dip"
-
+        android:backgroundTint="@android:color/background_light"
         android:prompt="@string/spinner_title"
-        />
-
-
+        android:textSize="25dp" />
 
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
