--- a/app/src/main/res/layout/activity_play_settings.xml
+++ b/app/src/main/res/layout/activity_play_settings.xml
@@ -9,37 +9,37 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:textColor="@android:color/background_light"
             android:text="Lives:"
-            />
+            android:textColor="@android:color/background_light" />
+
         <TextView
             android:id="@+id/lives"
-            android:paddingLeft="50dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingLeft="50dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:paddingLeft="200dp"
-            android:textColor="@android:color/background_light"
             android:layout_marginRight="20dp"
-            android:text="Coins:"/>
+            android:paddingLeft="200dp"
+            android:text="Coins:"
+            android:textColor="@android:color/background_light" />
 
         <TextView
             android:id="@+id/coins"
-            android:paddingLeft="250dp"
-            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:paddingLeft="250dp"
 
             />
 
@@ -47,11 +47,11 @@
 
     <TextView
         android:id="@+id/empty"
-        android:paddingLeft="250dp"
-        android:layout_marginRight="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:paddingLeft="250dp" />
 
     <Button
         android:id="@+id/buy_coins"
@@ -64,20 +64,20 @@
         android:id="@+id/sound"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dip"
         android:layout_marginLeft="10dip"
-        android:textColor="@android:color/background_light"
+        android:layout_marginTop="20dip"
         android:gravity="left"
-        android:textSize="25sp"
-        android:text="Sound" />
+        android:text="Sound"
+        android:textColor="@android:color/background_light"
+        android:textSize="25sp" />
 
     <!-- Text Label spinner-->
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:layout_marginTop="20dip"
         android:layout_marginLeft="10dip"
+        android:layout_marginTop="20dip"
         android:text="Category"
         android:textColor="@android:color/background_light"
         android:textSize="25sp" />
@@ -94,22 +94,20 @@
         android:textSize="25dp" />
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        >
+        android:layout_height="fill_parent">
 
         <!-- Exits the the game -->
         <Button
             android:id="@+id/exit"
             android:layout_width="120dp"
             android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/back"
-            android:layout_alignParentBottom="true"
             android:layout_toRightOf="@+id/view"
-            android:background="@drawable/exit_button"
-            />
+            android:background="@drawable/exit_button" />
 
         <View
             android:id="@+id/view"
@@ -122,10 +120,10 @@
             android:id="@+id/back"
             android:layout_width="120dp"
             android:layout_height="50dp"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@+id/view"
-            android:background="@drawable/back_button"/>
+            android:background="@drawable/back_button" />
 
     </RelativeLayout>
 
