Replay button works now :)

--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -219,6 +219,7 @@
             android:layout_width="90dp"
             android:layout_height="30dp"
             android:background="@drawable/replay_button"
+            android:onClick="replaySequence"
 
             />
 
