Edmundo's Code Revision of Controller, Player and Sequence Class - NMH's please check the javadoc updates and the comments for each method.

--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -220,13 +220,15 @@
         <Button
             android:layout_width="90dp"
             android:layout_height="30dp"
-            android:background="@drawable/replay_button" />
+            android:background="@drawable/replay_button"
+            android:onClick="replaySequence" />
 
         <Button
             android:layout_width="90dp"
             android:layout_height="30dp"
             android:layout_marginLeft="170dp"
-            android:background="@drawable/back_button" />
+            android:background="@drawable/back_button"
+            android:onClick="backToMenu"/>
 
 
     </LinearLayout>
