Add spinner in the Settings page for buying style.

--- a/app/src/main/res/layout/activity_play_settings.xml
+++ b/app/src/main/res/layout/activity_play_settings.xml
@@ -93,6 +93,23 @@
         android:prompt="@string/spinner_title"
         android:textSize="25dp" />
 
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="10dip"
+        android:backgroundTint="@android:color/background_light"
+        android:prompt="@string/spinner_title"
+        android:textSize="25dp" />
+
+    <Button
+        android:id="@+id/buy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Buy"
+        android:onClick="buyStyle"/>
+
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
@@ -109,6 +126,7 @@
             android:layout_alignParentBottom="true"
             android:layout_toRightOf="@+id/view"
             android:background="@drawable/exit_button"
+            android:onClick="exit"
             />
 
         <View
